# break-the-bricks

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  makefile
src/: constants.h  game.cpp  game.h  main.cpp  objects.cpp  objects.h  util.cpp  util.h
